# gmail-helper

./: .env.example  .gitignore  LICENSE  README.md  config.example.py  document_processor.py  drive_service.py  drive_token.json  drive_token.pickle  gmail_service.py  main.py  requirements.txt  run.py  setup.cfg  setup.py  token.json
.github/workflows/: main.yml
tests/: test_document_processor.py
